	removed all *_CK*_TCL() macros (e.g., BU_CKMAG_TCL, RT_CK_DBI_TCL, etc.) in favor of non-TCL macros [7.21]
s/bu_image/icv_image/g
	moved bu_image* functions to libicv as icv_image* [7.21]
s/BU_IMAGE/ICV_IMAGE/g
	moved BU_IMAGE* macros to icv.h as ICV_IMAGE* [7.21]
s/bu_cmd\(([^,]*?),[[:space:]]*([^,]*?),[[:space:]]*([^,]*?),[[:space:]]*([^,)]*?),[[:space:]]*([^)]*?)\)/bu_cmd(\4, \2, \3, \5, \1, NULL)/g
	inputs then outputs.  swapped bu_cmd's 4th parameter to 1st, 1st to 5th, and added a new return value hook last. [7.21]
s/V3(.*)_TOL\(([^,]*,)([^,]*,)([^,]*,)([^)]*)\)/V3\1_TOL(\1\2\3(\4)->dist)/g
	V3RPP_OVERLAP_TOL(), V3PT_IN_RPP_TOL(), and V3PT_OUT_RPP_TOL() tol parameter changed to value [7.21]
s/BU_GETSTRUCT\([[:space:]]*([^,)]+,)[[:space:]]*([^)]+)[[:space:]]*\)/BU_GET(\1 struct \2)/g
	BU_GETSTRUCT(ptr, struct_type) changed to BU_GET(ptr, struct struct_t) [7.21]
s/BU_GETUNION\([[:space:]]*([^,)]+,)[[:space:]]*([^)]+)[[:space:]]*\)/BU_GET(\1 union \2)/g
s/BU_GETTYPE\([[:space:]]*([^,)]+,)[[:space:]]*([^)]+)[[:space:]]*\)/BU_GET(\1 \2)/g
	BU_GETUNION() and BU_GETTYPE() macros changed to BU_GET() [7.21]
s/CMD_NULL/BU_CMD_NULL/g
s/CMDHIST/BU_CMDHIST/g
	prefix the cmd.h defines with BU_ since they are part of libbu [7.21]
s/bu_shader_to_tcl_list/bu_shader_to_list/g
	renamed as it applies to any list in {} form, tcl or otherwise [7.21]
s/bu_(add|delete|call)_hook/bu_hook_\1/g
	renamed hook functions to be consistent with other libbu API [7.21]
s/bu_file_exists\(([^)]*)\)/bu_file_exists(\1, NULL)/g
	new file descriptor parameter added [7.21]
s/bu_list_path\(([^,]*),([^,]*),[[:space:]]([^)]*)\)/bu_dir_list(\1,\2, &(\3))/g
s/bu_count_path(.*)\);/bu_dir_list\1, NULL);/g
	made bu_dir_list() return the number of entries [7.21]
s/bu_strcmpm\((.*),([^,]*)\)/bu_strcmp(\1)/g
	no use for label parameter, convert to bu_strcmp() [7.21]
        bu_set_realtime() [deprecated 7.22]

7.24
----
s/bu_set_realtime([[:space:]]);//g
        didn't do anything [7.23